# SAMgov

./: .gitignore  Dockerfile  Makefile  README.md  foundation_bridge.py  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
config/: profile.json
data/: opportunities.json  scan_log.json
data/processed/: analytics_2026-02-22.json  analytics_2026-02-22.md  opportunities_2026-02-22.csv
data/proposals/: DARPA-PA-25-07-02_20260222_151818.json  DARPA-PA-25-07-02_20260222_151818.md
src/analytics/: analyze.py
src/gmail_integration/: daily_digest.py  gmail.py
src/proposal/: generate.py  templates.py
src/scanner/: sam_api.py  scan.py  scoring.py
src/storage/: db.py
src/utils/: seed_data.py
